# low-latency-order-book-sim

./: .gitignore  CMakeLists.txt  README.md  environment-xgboost.yml  render.yaml
data/: aapl_lobster_normalized.csv
frontend/: app.js  index.html  report.md  styles.css
frontend/results/: aapl_eval_binary.json  aapl_intrusive.csv  aapl_lobster.csv  aapl_lobster_normalized_comparison.md  aapl_lobster_profile.csv  aapl_stage_bench_binary.csv  aapl_standard_linear_model.csv  balanced.csv  balanced_4sym.csv  balanced_comparison.md  balanced_intrusive.csv  balanced_perf.txt  balanced_sample.txt  bursty.csv  bursty_comparison.md  cancel_heavy.csv  cancel_heavy_comparison.md  lobster_sample.csv
include/lob/: features.hpp  types.hpp  (+4 more)
results/: aapl_lobster.csv  aapl_lobster_normalized_comparison.md  balanced.csv  balanced_comparison.md  balanced_perf.txt  bursty.csv  bursty_comparison.md  cancel_heavy.csv  lob_real_dataset_comparison.md  lobster_normalized_comparison.md  profile_balanced.csv  real_dataset_smoke.csv  replay_baseline_bursty.json  replay_baseline_cancel_heavy.json  replay_optimized_bursty.json  replay_optimized_cancel_heavy.json
scripts/: evaluate_predictions.py  normalize_lobster.py  prepare_frontend_bundle.sh  profile_engine.sh  run_benchmarks.sh  run_standard_inference_pipeline.py  sample_to_flamegraph.py  serve_frontend.sh  sweep_targets.py  train_logreg.py  train_mlp.py  train_xgboost.py
src/: benchmark.cpp  dataset.cpp  feature_extractor.cpp  inference_engine.cpp  main.cpp  replay.cpp  replay_engine.cpp  workload.cpp
tests/: test_order_books.cpp
(+3 files in other folders)
